# vector-floorplan-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.cursor/rules/: project-conventions.mdc
datasets/: README.md
src/vector_floorplan_ai/: __init__.py  logging.py
tests/: __init__.py  test_logging.py  test_package.py
